--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,7 @@
 name = "encurtaador"
 compatibility_date = "2024-01-01"
+[assets]
+directory = "./dist"
 
 [[kv_namespaces]]
 binding = "encurtaador"
