fix cloudflare pages

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,6 @@
 name = "encurtaador"
 compatibility_date = "2024-01-01"
-[assets]
-directory = "./dist"
+pages_build_output_dir = "./dist"
 
 [[kv_namespaces]]
 binding = "encurtaador"
