--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,8 @@
 name = "encurtaador"
 compatibility_date = "2024-01-01"
 pages_build_output_dir = "./dist"
+[build]
+functions = "functions"
 
 [[kv_namespaces]]
 binding = "encurtaador"
