--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "svelte": "^5.23.1",
     "svelte-check": "^4.1.5",
     "typescript": "~5.7.2",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "@types/qrcode": "^1.5.5"
   },
   "dependencies": {
-    "nanoid": "^5.1.5"
+    "nanoid": "^5.1.5",
+    "svelte-color": "^1.0.2"
   }
 }
