--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@sveltejs/kit": "^2.20.7",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/qrcode": "^1.5.5",
     "svelte": "^5.23.1",
     "svelte-check": "^4.1.5",
     "typescript": "~5.7.2",
-    "vite": "^6.3.1",
-    "@types/qrcode": "^1.5.5"
+    "vite": "^6.3.1"
   },
   "dependencies": {
     "nanoid": "^5.1.5",
+    "qrcode": "^1.5.4",
     "svelte-color": "^1.0.2"
   }
 }
