--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,3 +7,6 @@ functions = "functions"
 [[kv_namespaces]]
 binding = "encurtaador"
 id = "14a6de8cc31145b09e4cb565ee3e460a"
+
+[compatibility_flags]
+flags = ["nodejs_compat"]
