--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
-    "@sveltejs/kit": "^2.20.7",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tsconfig/svelte": "^5.0.4",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tsconfig/svelte": "^5.0.0",
     "@types/qrcode": "^1.5.5",
-    "svelte": "^5.23.1",
-    "svelte-check": "^4.1.5",
-    "typescript": "~5.7.2",
-    "vite": "^6.3.1"
+    "svelte": "^4.2.0",
+    "svelte-check": "^3.6.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "nanoid": "^5.1.5",
     "qrcode": "^1.5.4",
-    "svelte-color": "^1.0.2"
+    "svelte-color": "^1.0.2",
+    "svelte-spa-router": "^4.0.1"
   }
 }
